syntax = "proto3";

package auth.v1;

option go_package = "user/api/user/v1;v1";

import "google/protobuf/timestamp.proto";

// 认证服务
service AuthService {
  // 发送注册邮箱验证码
  rpc SendRegisterCode(SendRegisterCodeRequest) returns (SendRegisterCodeResponse);
  
  // 用户注册
  rpc Register(RegisterRequest) returns (RegisterResponse);
  
  // 用户登录
  rpc Login(LoginRequest) returns (LoginResponse);
  
  // 刷新Access Token
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  
  // 用户登出
  rpc Logout(LogoutRequest) returns (LogoutResponse);
}

// 用户服务
service UserService {
  // 获取当前用户资料
  rpc GetCurrentUser(GetCurrentUserRequest) returns (GetCurrentUserResponse);
  
  // 更新当前用户资料
  rpc UpdateCurrentUser(UpdateCurrentUserRequest) returns (UpdateCurrentUserResponse);
  
  // 查询当前可用点数
  rpc GetUserPoints(GetUserPointsRequest) returns (GetUserPointsResponse);
  
  // 查询点数消耗和交易流水记录
  rpc GetPointTransactions(GetPointTransactionsRequest) returns (GetPointTransactionsResponse);
}

// 发送注册验证码请求
message SendRegisterCodeRequest {
  string email = 1;
}

// 发送注册验证码响应
message SendRegisterCodeResponse {
  bool success = 1;
  string message = 2;
}

// 注册请求
message RegisterRequest {
  string email = 1;
  string password = 2;
  string code = 3;
  string nickname = 4;
}

// 注册响应
message RegisterResponse {
  int64 id = 1;
  string email = 2;
  string nickname = 3;
}

// 登录请求
message LoginRequest {
  string email = 1;
  string password = 2;
}

// 登录响应
message LoginResponse {
  string access_token = 1;
  int32 access_expires_in = 2;
  string refresh_token = 3;
  int32 refresh_expires_in = 4;
}

// 刷新Token请求
message RefreshTokenRequest {
  string refresh_token = 1;
}

// 刷新Token响应
message RefreshTokenResponse {
  string access_token = 1;
  int32 access_expires_in = 2;
}

// 登出请求
message LogoutRequest {
  string refresh_token = 1;
}

// 登出响应
message LogoutResponse {
  bool success = 1;
  string message = 2;
}

// 获取当前用户请求
message GetCurrentUserRequest {}

// 获取当前用户响应
message GetCurrentUserResponse {
  int64 id = 1;
  string email = 2;
  string nickname = 3;
  string avatar_url = 4;
  bool is_premium = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

// 更新当前用户请求
message UpdateCurrentUserRequest {
  string nickname = 1;
  string avatar_url = 2;
}

// 更新当前用户响应
message UpdateCurrentUserResponse {
  int64 id = 1;
  string email = 2;
  string nickname = 3;
  string avatar_url = 4;
  bool is_premium = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

// 获取用户点数请求
message GetUserPointsRequest {}

// 获取用户点数响应
message GetUserPointsResponse {
  int64 user_id = 1;
  uint32 current_points = 2;
  uint32 total_consumed = 3;
}

// 获取点数交易流水请求
message GetPointTransactionsRequest {
  int32 page = 1;
  int32 page_size = 2;
}

// 获取点数交易流水响应
message GetPointTransactionsResponse {
  repeated PointTransaction transactions = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
}

// 点数交易记录
message PointTransaction {
  int64 id = 1;
  int64 user_id = 2;
  string type = 3;
  uint32 amount = 4;
  int64 related_book_id = 5;
  string description = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}